--- a/style.css
+++ b/style.css
@@ -1,169 +1,143 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
-
+/* ---- global styles ---- */
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  font-style: normal;
-  font-weight: 700;
-  font-family: sans-serif;
 }
 
-a {
-  text-decoration: none;
+/* ---- Navbar ---- */
+.nav-header {
+  padding: 5px 10px;
 }
 
-li {
-  list-style: none;
-}
-
-.nav__branding {
-  font-weight: bold;
-  font-size: 25px;
-}
-
-.navbar {
+.nav-container {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  border: 1px solid #000;
-  padding: 25px;
-  margin: 15px;
-}
-
-.nav__items {
-  display: flex;
-  gap: 20px;
-}
-
-.time {
-  display: flex;
-  justify-content: flex-end;
-  margin-right: 15px;
-}
-
-.title-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.book-list {
-  border: 1px solid #000;
-  margin: 20px;
-  height: 450px;
-  overflow: scroll;
-}
-
-.add-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.list-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-h3,
-p,
-.btn {
-  text-align: center;
-}
-
-.title {
-  padding: 10px;
-  width: 200px;
-}
-
-.author {
-  padding: 10px;
-  width: 200px;
-}
-
-.remove {
-  color: #f00;
-  border: 1px solid #000;
   padding: 5px;
+  border: 2px solid #000;
+  margin: 5px;
 }
 
-.list {
+.nav-menu {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   align-items: center;
-  padding: 10px;
-  border-bottom: 1px #000;
+  list-style: none;
+  gap: 8px;
 }
 
-.row {
-  display: flex;
-  gap: 20px;
+.menu-item {
+  cursor: pointer;
+  padding: 3px;
 }
 
-.contact__header {
-  text-align: center;
-}
-
-.contact__info {
+.main_container {
   display: flex;
   flex-direction: column;
+  align-content: center;
+  width: 100%;
 }
 
-.contact__text {
-  margin: 15px 0;
-  font-size: 15px;
-  text-align: left;
+/* ---- Date ---- */
+.date-container {
+  padding: 5px;
+  text-align: right;
 }
 
-.contact__info li {
-  list-style: inside;
-  font-size: 15px;
+/* ---- Book List ---- */
+.book-list-section {
+  margin-top: 50px;
 }
 
-.footer {
+.main-header {
+  text-align: center;
+  margin: 20px 0 30px;
+}
+
+.book-container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   border: 1px solid #000;
-  margin: 0 20px;
+  margin: 5px;
+  margin-bottom: 50px;
+}
+
+.book-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 8px;
+  width: 100%;
+}
+
+.book-item button {
+  height: 1.5rem;
+  margin-right: 8px;
+}
+
+.book-item p {
+  margin: 8px;
+}
+
+.dark-bg {
+  background-color: rgb(233, 233, 233);
+}
+
+/* ---- Add Book Form ---- */
+.book-form {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+  margin: 0 auto;
+  margin-top: 50px;
+  margin-bottom: 30px;
+}
+
+.form_header {
+  text-align: center;
+  padding: 20px 0;
+  min-width: 100px;
+}
+
+.input_item {
+  width: 100%;
+}
+
+#add_book {
+  align-self: flex-end;
+}
+
+/* ---- Contact Section ---- */
+.contact-section {
+  display: none;
+  margin: 5px;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20px;
+  margin-top: 50px;
+}
+
+.contact-section h2 {
+  padding: 20px;
+}
+
+.contact_details {
   padding: 10px;
-  font-size: 12px;
-  position: absolute;
-  bottom: 0;
+}
+
+.contact_details p {
+  margin: 20px 0;
+}
+
+/* ---- Footer ---- */
+footer {
+  position: fixed;
   left: 0;
   right: 0;
-}
-
-.content,
-.new-book-container,
-.contact {
-  position: relative;
-}
-
-.new-book-container {
-  display: none;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 30px;
-}
-
-.contact {
-  display: none;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.add-btn {
-  padding: 10px;
-  border: 1px solid #000;
-  background-color: #fff;
-  color: #000;
-  font-size: 12px;
-  font-weight: 700;
-  border-radius: 5px;
-  cursor: pointer;
+  bottom: 0;
+  margin: 5px;
+  padding: 5px 10px;
+  border: 2px solid #000;
+  justify-self: end;
 }
