--- a/style.css
+++ b/style.css
@@ -1,143 +1,175 @@
-/* ---- global styles ---- */
-* {
-  box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
+
+*,
+::before,
+::after {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-style: normal;
+  font-weight: 700;
+  font-family: sans-serif;
 }
 
-/* ---- Navbar ---- */
-.nav-header {
-  padding: 5px 10px;
+a {
+  text-decoration: none;
 }
 
-.nav-container {
-  display: flex;
-  justify-content: space-between;
-  padding: 5px;
-  border: 2px solid #000;
-  margin: 5px;
-}
-
-.nav-menu {
-  display: flex;
-  align-items: center;
+li {
   list-style: none;
-  gap: 8px;
 }
 
-.menu-item {
-  cursor: pointer;
-  padding: 3px;
+html {
+  font-size: 82%;
 }
 
-.main_container {
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  width: 100%;
+.nav__branding {
+  font-weight: bold;
+  font-size: 25px;
 }
 
-/* ---- Date ---- */
-.date-container {
-  padding: 5px;
-  text-align: right;
-}
-
-/* ---- Book List ---- */
-.book-list-section {
-  margin-top: 50px;
-}
-
-.main-header {
-  text-align: center;
-  margin: 20px 0 30px;
-}
-
-.book-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 1px solid #000;
-  margin: 5px;
-  margin-bottom: 50px;
-}
-
-.book-item {
+.navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 8px;
-  width: 100%;
+  border: 1px solid black;
+  padding: 25px;
+  margin: 15px;
 }
 
-.book-item button {
-  height: 1.5rem;
-  margin-right: 8px;
+.nav__items {
+  display: flex;
+  gap: 20px;
 }
 
-.book-item p {
-  margin: 8px;
+.time {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 15px;
 }
 
-.dark-bg {
-  background-color: rgb(233, 233, 233);
-}
-
-/* ---- Add Book Form ---- */
-.book-form {
-  display: none;
+.title-container {
+  display: flex;
   flex-direction: column;
   align-items: center;
-  width: 200px;
-  margin: 0 auto;
-  margin-top: 50px;
-  margin-bottom: 30px;
+  justify-content: center;
 }
 
-.form_header {
+.book-list {
+  border: 1px solid black;
+  margin: 20px;
+  height: 450px;
+  overflow: scroll;
+}
+
+.add-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.list-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+h3,
+p,
+.btn {
   text-align: center;
-  padding: 20px 0;
-  min-width: 100px;
 }
 
-.input_item {
-  width: 100%;
-}
-
-#add_book {
-  align-self: flex-end;
-}
-
-/* ---- Contact Section ---- */
-.contact-section {
-  display: none;
-  margin: 5px;
-  flex-direction: column;
-  align-items: center;
-  padding-bottom: 20px;
-  margin-top: 50px;
-}
-
-.contact-section h2 {
-  padding: 20px;
-}
-
-.contact_details {
+.title {
   padding: 10px;
+  width: 200px;
 }
 
-.contact_details p {
-  margin: 20px 0;
+.author {
+  padding: 10px;
+  width: 200px;
 }
 
-/* ---- Footer ---- */
-footer {
-  position: fixed;
+.remove {
+  color: red;
+  border: 1px solid black;
+  padding: 5px;
+}
+
+.list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 1px solid black;
+}
+
+.row {
+  display: flex;
+  gap: 20px;
+}
+
+.contact__header {
+  text-align: center;
+}
+
+.contact__info {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact__text {
+  margin: 15px 0;
+  font-size: 15px;
+  text-align: left;
+}
+
+.contact__info li {
+  list-style: inside;
+  font-size: 15px;
+}
+
+.footer {
+  display: flex;
+  border: 1px solid black;
+  margin: 0 20px;
+  padding: 10px;
+  font-size: 12px;
+  position: absolute;
+  bottom: 0;
   left: 0;
   right: 0;
-  bottom: 0;
-  margin: 5px;
-  padding: 5px 10px;
-  border: 2px solid #000;
-  justify-self: end;
+}
+
+.content,
+.new-book-container,
+.contact {
+  position: relative;
+}
+
+.new-book-container {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
+.contact {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.add-btn {
+  padding: 10px;
+  border: 1px solid black;
+  background-color: white;
+  color: black;
+  font-size: 12px;
+  font-weight: 700;
+  border-radius: 5px;
+  cursor: pointer;
 }
